2011-05-11  Daiki Ueno  <ueno@unixuser.org>

	* pubkey.c (sexp_data_to_mpi): Factor some code out to ...
	(get_hash_algo): .. new.
	(mgf1, oaep_encode, oaep_decode): New.
	(sexp_to_enc): Add arg CTX.  Remove arg RET_WANT_PKCS1.  Support
	OAEP.
	(sexp_data_to_mpi): Add arg CTX.  Support OAEP.
	(gcry_pk_encrypt): Pass a CTX to sexp_data_to_mpi.
	(gcry_pk_decrypt): Pass a CTX tp sexp_to_enc and replace
	WANT_PKCS1.  Implement unpadding for OAEP.
	(gcry_pk_sign): Pass NULL for CTX arg of sexp_data_to_mpi.
	(gcry_pk_verify): Ditto.

2011-04-19  Werner Koch  <wk@g10code.com>

	* cipher.c (gcry_cipher_open): Replace gpg_err_code_from_errno by
	gpg_err_code_from_syserror.

2011-04-11  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_get_keygrip): Avoid double free of L2.

	* cipher.c (_gcry_cipher_setctr): Clear unused lastiv info.
	(gcry_cipher_ctl) <GCRYCTL_SET_CTR>: Implement by calling
	_gcry_cipher_setctr.
	(do_ctr_encrypt): Save last counter and reuse it.

	* cipher.c (do_ctr_encrypt): Allow arbitrary length inputs to
	match the 1.4 behaviour.

2011-04-04  Werner Koch  <wk@g10code.com>

	* ecc.c (compute_keygrip): Release L1 while parsing "curve".

	* pubkey.c (gcry_pk_get_keygrip): Always release NAME and L2.
	Reported by Ben Kibbey.

2011-03-28  Werner Koch  <wk@g10code.com>

	* primegen.c (_gcry_generate_elg_prime): Make sure that PRIME is
	NULL if the called func ever returns an error.

	* pubkey.c (gcry_pk_decrypt): Remove unused var PUBKEY.

2011-03-09  Werner Koch  <wk@g10code.com>

	* kdf.c: New.

2011-02-22  Werner Koch  <wk@g10code.com>

	* rijndael.c (aesni_cleanup_2_4): New.
	(aesenc_xmm1_xmm0, do_aesni_ctr_4): New.
	(_gcry_aes_ctr_enc): New.
	* cipher.c (struct gcry_cipher_handle): Add CTR_ENC.  Move field
	CTR into an u_ctr union and adjust all users.
	(gcry_cipher_open): Use _gcry_aes_ctr_enc.
	(do_ctr_encrypt): Use bulk mode.

2011-02-18  Werner Koch  <wk@g10code.com>

	* rijndael.c (u32_a_t): New.